# Kepler

./: df.csv  problem_statement2_answers.docx  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  keplar_randomForest-checkpoint.ipynb  kepler_lightgbm-checkpoint.ipynb  kepler_xgb-checkpoint.ipynb
model training & ipynb files/: keplar_randomForest.ipynb  kepler_lightgbm.ipynb  kepler_xgb.ipynb
model training & ipynb files/.ipynb_checkpoints/: Voting classifier-checkpoint.ipynb  kepler_adaboost-checkpoint.ipynb
saved joblib models/: ada_kepler.joblib  lightgbm_kepler.joblib  xgb_kepler.joblib
