[tool.poetry]
name = "kepler"
version = "0.1.0"
description = ""
authors = ["SarrangTech <bathalapalli9920@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^0.24.0"
xgboost = "^1.5.0"
lightgbm = "^3.2.1"
joblib = "^1.1.0"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
scipy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
